[package]
name = "mad-nes"
version = "0.1.0"
authors = ["Samuel Edwin <esam091@gmail.com>"]
edition = "2018"

[features]
log_ppu = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.14"
termion = "1.5"
sdl2 = "0.34"
bitflags = "1.2.1"